# mk42-binance-backtesting

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-test.yml
grafana/data/: grafana.db
influxdb/data/: influxd.bolt
influxdb/data/engine/data/74ce7496858facd9/autogen/1/: fields.idx
influxdb/data/engine/data/74ce7496858facd9/autogen/1/index/0/: L0-00000001.tsl
influxdb/data/engine/data/74ce7496858facd9/autogen/1/index/1/: L0-00000001.tsl
influxdb/data/engine/data/74ce7496858facd9/autogen/1/index/2/: L0-00000001.tsl
influxdb/data/engine/data/74ce7496858facd9/autogen/1/index/3/: L0-00000001.tsl
influxdb/data/engine/data/74ce7496858facd9/autogen/1/index/4/: L0-00000001.tsl
influxdb/data/engine/data/74ce7496858facd9/autogen/1/index/5/: L0-00000001.tsl
influxdb/data/engine/data/74ce7496858facd9/autogen/1/index/6/: L0-00000001.tsl
influxdb/data/engine/data/74ce7496858facd9/autogen/1/index/7/: L0-00000001.tsl
influxdb/data/engine/wal/74ce7496858facd9/autogen/1/: _00001.wal
src/: cli.rs  date.rs  fetch_command.rs  klines.rs  main.rs  progress.rs  symbols.rs  test_command.rs  trading_signal.rs  types.rs  visualize_command.rs
