[package]
name = "binance-get"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
tempfile = { version = "3.3.0"}
csv = { version = "1.1"}
regex = { version = "1"}
zip = { version = "0.6.3" }
serde-xml-rs = { version = "0.6.0" }
serde = { version = "1.0.147", features = ["derive"] }
urlencoding = { version = "2.1.2"}
chrono = { version = "0.4.19", features = ["serde"]}
rayon = { version = "1.5.3"}
